[project]
name = "triton-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pytest>=8.4.1",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "triton>=3.3.1",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu121_full/torch-2.5.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
